--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gonghanna.github.io/artboda/",
+  "homepage": "https://gonghanna.github.io/Artboda/",
   "name": "artboda",
   "version": "0.1.0",
   "private": true,
